--- a/cppLeetcode.vcxproj
+++ b/cppLeetcode.vcxproj
@@ -127,6 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="144.cpp" />
     <ClCompile Include="cppLeetcode.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
