94题情况跟144一样

--- a/cppLeetcode.vcxproj
+++ b/cppLeetcode.vcxproj
@@ -128,6 +128,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="144.cpp" />
+    <ClCompile Include="94.cpp" />
     <ClCompile Include="cppLeetcode.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
