--- a/cppLeetcode.vcxproj.filters
+++ b/cppLeetcode.vcxproj.filters
@@ -21,5 +21,8 @@
     <ClCompile Include="144.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="94.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
