提交2698，练习了回溯法之后再来重做

--- a/cppLeetcode.vcxproj
+++ b/cppLeetcode.vcxproj
@@ -129,6 +129,7 @@
   <ItemGroup>
     <ClCompile Include="144.cpp" />
     <ClCompile Include="242.cpp" />
+    <ClCompile Include="2698.cpp" />
     <ClCompile Include="94.cpp" />
     <ClCompile Include="cppLeetcode.cpp" />
   </ItemGroup>
