--- a/cppLeetcode.vcxproj.filters
+++ b/cppLeetcode.vcxproj.filters
@@ -27,5 +27,8 @@
     <ClCompile Include="242.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="2698.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
