--- a/cppLeetcode.vcxproj
+++ b/cppLeetcode.vcxproj
@@ -128,6 +128,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="144.cpp" />
+    <ClCompile Include="160.cpp" />
     <ClCompile Include="242.cpp" />
     <ClCompile Include="2698.cpp" />
     <ClCompile Include="94.cpp" />
