--- a/cppLeetcode.vcxproj.filters
+++ b/cppLeetcode.vcxproj.filters
@@ -30,5 +30,8 @@
     <ClCompile Include="2698.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="160.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
