73费时间费空间。，73_2思路都是错的，还在这写

--- a/cppLeetcode.vcxproj
+++ b/cppLeetcode.vcxproj
@@ -131,6 +131,8 @@
     <ClCompile Include="160.cpp" />
     <ClCompile Include="242.cpp" />
     <ClCompile Include="2698.cpp" />
+    <ClCompile Include="73.cpp" />
+    <ClCompile Include="73_2.cpp" />
     <ClCompile Include="94.cpp" />
     <ClCompile Include="cppLeetcode.cpp" />
   </ItemGroup>
