--- a/cppLeetcode.vcxproj.filters
+++ b/cppLeetcode.vcxproj.filters
@@ -33,5 +33,11 @@
     <ClCompile Include="160.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="73.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="73_2.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
