42题使用CPP自带Sort实现。后续应自行实现sort函数

--- a/cppLeetcode.vcxproj.filters
+++ b/cppLeetcode.vcxproj.filters
@@ -39,5 +39,8 @@
     <ClCompile Include="73_2.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="42.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
