--- a/cppLeetcode.vcxproj
+++ b/cppLeetcode.vcxproj
@@ -131,6 +131,7 @@
     <ClCompile Include="160.cpp" />
     <ClCompile Include="242.cpp" />
     <ClCompile Include="2698.cpp" />
+    <ClCompile Include="42.cpp" />
     <ClCompile Include="73.cpp" />
     <ClCompile Include="73_2.cpp" />
     <ClCompile Include="94.cpp" />
