--- a/cppLeetcode.vcxproj.filters
+++ b/cppLeetcode.vcxproj.filters
@@ -39,7 +39,10 @@
     <ClCompile Include="73_2.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="42.cpp">
+    <ClCompile Include="148.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="psort.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
