--- a/cppLeetcode.vcxproj
+++ b/cppLeetcode.vcxproj
@@ -131,11 +131,12 @@
     <ClCompile Include="160.cpp" />
     <ClCompile Include="242.cpp" />
     <ClCompile Include="2698.cpp" />
-    <ClCompile Include="42.cpp" />
+    <ClCompile Include="148.cpp" />
     <ClCompile Include="73.cpp" />
     <ClCompile Include="73_2.cpp" />
     <ClCompile Include="94.cpp" />
     <ClCompile Include="cppLeetcode.cpp" />
+    <ClCompile Include="psort.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
