--- a/cppLeetcode.vcxproj
+++ b/cppLeetcode.vcxproj
@@ -136,7 +136,7 @@
     <ClCompile Include="73_2.cpp" />
     <ClCompile Include="94.cpp" />
     <ClCompile Include="cppLeetcode.cpp" />
-    <ClCompile Include="psort.cpp" />
+    <ClCompile Include="psort_148.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
