--- a/cppLeetcode.vcxproj
+++ b/cppLeetcode.vcxproj
@@ -132,6 +132,7 @@
     <ClCompile Include="242.cpp" />
     <ClCompile Include="2698.cpp" />
     <ClCompile Include="148.cpp" />
+    <ClCompile Include="42.cpp" />
     <ClCompile Include="73.cpp" />
     <ClCompile Include="73_2.cpp" />
     <ClCompile Include="94.cpp" />
