--- a/cppLeetcode.vcxproj.filters
+++ b/cppLeetcode.vcxproj.filters
@@ -45,5 +45,8 @@
     <ClCompile Include="psort_148.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="42.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
