--- a/cppLeetcode.vcxproj
+++ b/cppLeetcode.vcxproj
@@ -129,6 +129,7 @@
   <ItemGroup>
     <ClCompile Include="144.cpp" />
     <ClCompile Include="160.cpp" />
+    <ClCompile Include="200.cpp" />
     <ClCompile Include="242.cpp" />
     <ClCompile Include="2698.cpp" />
     <ClCompile Include="148.cpp" />
