--- a/cppLeetcode.vcxproj.filters
+++ b/cppLeetcode.vcxproj.filters
@@ -48,5 +48,8 @@
     <ClCompile Include="42.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="200.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
