994这b中等题做了我一个小时。 纯纯浪费时间，代码又长，效率又差 要换个方法

--- a/cppLeetcode.vcxproj
+++ b/cppLeetcode.vcxproj
@@ -137,6 +137,7 @@
     <ClCompile Include="73.cpp" />
     <ClCompile Include="73_2.cpp" />
     <ClCompile Include="94.cpp" />
+    <ClCompile Include="994.cpp" />
     <ClCompile Include="cppLeetcode.cpp" />
     <ClCompile Include="psort_148.cpp" />
   </ItemGroup>
