--- a/cppLeetcode.vcxproj.filters
+++ b/cppLeetcode.vcxproj.filters
@@ -51,5 +51,8 @@
     <ClCompile Include="200.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="994.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
