300 另一种类型的DP，经典好题，递推公式要记住

--- a/cppLeetcode.vcxproj.filters
+++ b/cppLeetcode.vcxproj.filters
@@ -57,5 +57,11 @@
     <ClCompile Include="51.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="198.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="300.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
