--- a/cppLeetcode.vcxproj
+++ b/cppLeetcode.vcxproj
@@ -134,6 +134,7 @@
     <ClCompile Include="242.cpp" />
     <ClCompile Include="2698.cpp" />
     <ClCompile Include="148.cpp" />
+    <ClCompile Include="300.cpp" />
     <ClCompile Include="42.cpp" />
     <ClCompile Include="51.cpp" />
     <ClCompile Include="73.cpp" />
