--- a/cppLeetcode.vcxproj
+++ b/cppLeetcode.vcxproj
@@ -131,6 +131,7 @@
     <ClCompile Include="160.cpp" />
     <ClCompile Include="198.cpp" />
     <ClCompile Include="200.cpp" />
+    <ClCompile Include="215.cpp" />
     <ClCompile Include="242.cpp" />
     <ClCompile Include="2698.cpp" />
     <ClCompile Include="148.cpp" />
@@ -141,6 +142,7 @@
     <ClCompile Include="73_2.cpp" />
     <ClCompile Include="94.cpp" />
     <ClCompile Include="994.cpp" />
+    <ClCompile Include="best_k_215.cpp" />
     <ClCompile Include="cppLeetcode.cpp" />
     <ClCompile Include="psort_148.cpp" />
   </ItemGroup>
