--- a/cppLeetcode.vcxproj.filters
+++ b/cppLeetcode.vcxproj.filters
@@ -63,5 +63,11 @@
     <ClCompile Include="300.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="215.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="best_k_215.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
