--- a/cppLeetcode.vcxproj.filters
+++ b/cppLeetcode.vcxproj.filters
@@ -69,5 +69,8 @@
     <ClCompile Include="best_k_215.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="35.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
