--- a/cppLeetcode.vcxproj
+++ b/cppLeetcode.vcxproj
@@ -141,6 +141,7 @@
     <ClCompile Include="51.cpp" />
     <ClCompile Include="73.cpp" />
     <ClCompile Include="73_2.cpp" />
+    <ClCompile Include="74.cpp" />
     <ClCompile Include="94.cpp" />
     <ClCompile Include="994.cpp" />
     <ClCompile Include="best_k_215.cpp" />
