--- a/cppLeetcode.vcxproj.filters
+++ b/cppLeetcode.vcxproj.filters
@@ -72,5 +72,8 @@
     <ClCompile Include="35.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="74.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
