--- a/cppLeetcode.vcxproj
+++ b/cppLeetcode.vcxproj
@@ -136,6 +136,7 @@
     <ClCompile Include="2698.cpp" />
     <ClCompile Include="148.cpp" />
     <ClCompile Include="300.cpp" />
+    <ClCompile Include="34.cpp" />
     <ClCompile Include="35.cpp" />
     <ClCompile Include="42.cpp" />
     <ClCompile Include="51.cpp" />
