--- a/cppLeetcode.vcxproj.filters
+++ b/cppLeetcode.vcxproj.filters
@@ -75,5 +75,8 @@
     <ClCompile Include="74.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="34.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
