347这个题目舍近求远，用了一些复杂方法，但也学到了新东西。 学到了结构体的定义，结构体的运算符重载，vector<struct>的自定义sort 可以多复习这个。

--- a/cppLeetcode.vcxproj
+++ b/cppLeetcode.vcxproj
@@ -137,6 +137,7 @@
     <ClCompile Include="148.cpp" />
     <ClCompile Include="300.cpp" />
     <ClCompile Include="34.cpp" />
+    <ClCompile Include="347.cpp" />
     <ClCompile Include="35.cpp" />
     <ClCompile Include="42.cpp" />
     <ClCompile Include="51.cpp" />
