--- a/cppLeetcode.vcxproj.filters
+++ b/cppLeetcode.vcxproj.filters
@@ -78,5 +78,8 @@
     <ClCompile Include="34.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="347.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
