--- a/cppLeetcode.vcxproj.filters
+++ b/cppLeetcode.vcxproj.filters
@@ -81,5 +81,11 @@
     <ClCompile Include="347.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="121.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="1005.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
