--- a/cppLeetcode.vcxproj
+++ b/cppLeetcode.vcxproj
@@ -137,6 +137,7 @@
     <ClCompile Include="242.cpp" />
     <ClCompile Include="2698.cpp" />
     <ClCompile Include="148.cpp" />
+    <ClCompile Include="3.cpp" />
     <ClCompile Include="300.cpp" />
     <ClCompile Include="34.cpp" />
     <ClCompile Include="347.cpp" />
