--- a/cppLeetcode.vcxproj.filters
+++ b/cppLeetcode.vcxproj.filters
@@ -90,5 +90,8 @@
     <ClCompile Include="3.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="62.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
