--- a/cppLeetcode.vcxproj
+++ b/cppLeetcode.vcxproj
@@ -132,6 +132,7 @@
     <ClCompile Include="144.cpp" />
     <ClCompile Include="160.cpp" />
     <ClCompile Include="198.cpp" />
+    <ClCompile Include="20.cpp" />
     <ClCompile Include="200.cpp" />
     <ClCompile Include="215.cpp" />
     <ClCompile Include="242.cpp" />
