--- a/cppLeetcode.vcxproj.filters
+++ b/cppLeetcode.vcxproj.filters
@@ -93,5 +93,8 @@
     <ClCompile Include="62.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="20.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
