--- a/cppLeetcode.vcxproj.filters
+++ b/cppLeetcode.vcxproj.filters
@@ -96,5 +96,8 @@
     <ClCompile Include="20.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="146.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
