--- a/cppLeetcode.vcxproj.filters
+++ b/cppLeetcode.vcxproj.filters
@@ -99,5 +99,11 @@
     <ClCompile Include="146.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="322.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="48.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
