--- a/cppLeetcode.vcxproj
+++ b/cppLeetcode.vcxproj
@@ -135,6 +135,7 @@
     <ClCompile Include="198.cpp" />
     <ClCompile Include="20.cpp" />
     <ClCompile Include="200.cpp" />
+    <ClCompile Include="207.cpp" />
     <ClCompile Include="215.cpp" />
     <ClCompile Include="242.cpp" />
     <ClCompile Include="2698.cpp" />
