--- a/cppLeetcode.vcxproj.filters
+++ b/cppLeetcode.vcxproj.filters
@@ -105,5 +105,8 @@
     <ClCompile Include="48.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="207.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
