--- a/cppLeetcode.vcxproj.filters
+++ b/cppLeetcode.vcxproj.filters
@@ -108,5 +108,8 @@
     <ClCompile Include="207.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="206.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
