--- a/cppLeetcode.vcxproj.filters
+++ b/cppLeetcode.vcxproj.filters
@@ -111,5 +111,11 @@
     <ClCompile Include="206.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="234.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="141.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
