--- a/cppLeetcode.vcxproj.filters
+++ b/cppLeetcode.vcxproj.filters
@@ -117,5 +117,8 @@
     <ClCompile Include="141.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="142.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
