--- a/cppLeetcode.vcxproj.filters
+++ b/cppLeetcode.vcxproj.filters
@@ -120,5 +120,8 @@
     <ClCompile Include="142.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="102.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
