--- a/cppLeetcode.vcxproj
+++ b/cppLeetcode.vcxproj
@@ -128,6 +128,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="1005.cpp" />
+    <ClCompile Include="102.cpp" />
     <ClCompile Include="121.cpp" />
     <ClCompile Include="141.cpp" />
     <ClCompile Include="142.cpp" />
