--- a/cppLeetcode.vcxproj
+++ b/cppLeetcode.vcxproj
@@ -129,6 +129,7 @@
   <ItemGroup>
     <ClCompile Include="1005.cpp" />
     <ClCompile Include="102.cpp" />
+    <ClCompile Include="104.cpp" />
     <ClCompile Include="121.cpp" />
     <ClCompile Include="141.cpp" />
     <ClCompile Include="142.cpp" />
