--- a/cppLeetcode.vcxproj.filters
+++ b/cppLeetcode.vcxproj.filters
@@ -123,5 +123,8 @@
     <ClCompile Include="102.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="104.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
