--- a/cppLeetcode.vcxproj.filters
+++ b/cppLeetcode.vcxproj.filters
@@ -126,5 +126,17 @@
     <ClCompile Include="104.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="108.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="98.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="100115.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="100116.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
