--- a/cppLeetcode.vcxproj
+++ b/cppLeetcode.vcxproj
@@ -133,6 +133,7 @@
     <ClCompile Include="102.cpp" />
     <ClCompile Include="104.cpp" />
     <ClCompile Include="108.cpp" />
+    <ClCompile Include="114.cpp" />
     <ClCompile Include="121.cpp" />
     <ClCompile Include="141.cpp" />
     <ClCompile Include="142.cpp" />
