--- a/cppLeetcode.vcxproj
+++ b/cppLeetcode.vcxproj
@@ -147,6 +147,7 @@
     <ClCompile Include="207.cpp" />
     <ClCompile Include="215.cpp" />
     <ClCompile Include="234.cpp" />
+    <ClCompile Include="236.cpp" />
     <ClCompile Include="242.cpp" />
     <ClCompile Include="2698.cpp" />
     <ClCompile Include="148.cpp" />
