--- a/cppLeetcode.vcxproj.filters
+++ b/cppLeetcode.vcxproj.filters
@@ -141,5 +141,8 @@
     <ClCompile Include="114.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="236.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
