--- a/cppLeetcode.vcxproj.filters
+++ b/cppLeetcode.vcxproj.filters
@@ -144,5 +144,8 @@
     <ClCompile Include="236.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="56.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
