--- a/cppLeetcode.vcxproj
+++ b/cppLeetcode.vcxproj
@@ -145,6 +145,7 @@
     <ClCompile Include="200.cpp" />
     <ClCompile Include="206.cpp" />
     <ClCompile Include="207.cpp" />
+    <ClCompile Include="21.cpp" />
     <ClCompile Include="215.cpp" />
     <ClCompile Include="234.cpp" />
     <ClCompile Include="236.cpp" />
