--- a/cppLeetcode.vcxproj.filters
+++ b/cppLeetcode.vcxproj.filters
@@ -147,5 +147,8 @@
     <ClCompile Include="56.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="21.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
