--- a/cppLeetcode.vcxproj.filters
+++ b/cppLeetcode.vcxproj.filters
@@ -150,5 +150,8 @@
     <ClCompile Include="21.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="92.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
