--- a/cppLeetcode.vcxproj
+++ b/cppLeetcode.vcxproj
@@ -141,6 +141,7 @@
     <ClCompile Include="146.cpp" />
     <ClCompile Include="160.cpp" />
     <ClCompile Include="198.cpp" />
+    <ClCompile Include="2.cpp" />
     <ClCompile Include="20.cpp" />
     <ClCompile Include="200.cpp" />
     <ClCompile Include="206.cpp" />
