--- a/cppLeetcode.vcxproj.filters
+++ b/cppLeetcode.vcxproj.filters
@@ -156,5 +156,11 @@
     <ClCompile Include="2.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="128.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="19.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
