--- a/cppLeetcode.vcxproj
+++ b/cppLeetcode.vcxproj
@@ -135,11 +135,13 @@
     <ClCompile Include="108.cpp" />
     <ClCompile Include="114.cpp" />
     <ClCompile Include="121.cpp" />
+    <ClCompile Include="128.cpp" />
     <ClCompile Include="141.cpp" />
     <ClCompile Include="142.cpp" />
     <ClCompile Include="144.cpp" />
     <ClCompile Include="146.cpp" />
     <ClCompile Include="160.cpp" />
+    <ClCompile Include="19.cpp" />
     <ClCompile Include="198.cpp" />
     <ClCompile Include="2.cpp" />
     <ClCompile Include="20.cpp" />
