异或A^A = 0; 0^A = A;符合分配律结合律

--- a/cppLeetcode.vcxproj
+++ b/cppLeetcode.vcxproj
@@ -136,6 +136,7 @@
     <ClCompile Include="114.cpp" />
     <ClCompile Include="121.cpp" />
     <ClCompile Include="128.cpp" />
+    <ClCompile Include="136.cpp" />
     <ClCompile Include="141.cpp" />
     <ClCompile Include="142.cpp" />
     <ClCompile Include="144.cpp" />
