--- a/cppLeetcode.vcxproj.filters
+++ b/cppLeetcode.vcxproj.filters
@@ -162,5 +162,8 @@
     <ClCompile Include="19.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="136.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
