--- a/cppLeetcode.vcxproj
+++ b/cppLeetcode.vcxproj
@@ -170,6 +170,7 @@
     <ClCompile Include="73.cpp" />
     <ClCompile Include="73_2.cpp" />
     <ClCompile Include="74.cpp" />
+    <ClCompile Include="75.cpp" />
     <ClCompile Include="92.cpp" />
     <ClCompile Include="94.cpp" />
     <ClCompile Include="98.cpp" />
