--- a/cppLeetcode.vcxproj.filters
+++ b/cppLeetcode.vcxproj.filters
@@ -165,5 +165,8 @@
     <ClCompile Include="136.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="75.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
