--- a/cppLeetcode.vcxproj
+++ b/cppLeetcode.vcxproj
@@ -153,6 +153,7 @@
     <ClCompile Include="215.cpp" />
     <ClCompile Include="234.cpp" />
     <ClCompile Include="236.cpp" />
+    <ClCompile Include="239.cpp" />
     <ClCompile Include="242.cpp" />
     <ClCompile Include="2698.cpp" />
     <ClCompile Include="148.cpp" />
@@ -162,6 +163,7 @@
     <ClCompile Include="34.cpp" />
     <ClCompile Include="347.cpp" />
     <ClCompile Include="35.cpp" />
+    <ClCompile Include="394.cpp" />
     <ClCompile Include="42.cpp" />
     <ClCompile Include="48.cpp" />
     <ClCompile Include="51.cpp" />
