--- a/cppLeetcode.vcxproj
+++ b/cppLeetcode.vcxproj
@@ -142,6 +142,7 @@
     <ClCompile Include="144.cpp" />
     <ClCompile Include="146.cpp" />
     <ClCompile Include="160.cpp" />
+    <ClCompile Include="17.cpp" />
     <ClCompile Include="19.cpp" />
     <ClCompile Include="198.cpp" />
     <ClCompile Include="2.cpp" />
