--- a/cppLeetcode.vcxproj.filters
+++ b/cppLeetcode.vcxproj.filters
@@ -174,5 +174,8 @@
     <ClCompile Include="239.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="17.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
