标准的递归，没什么难度，即使五分钟写出来了，依然得练，代码有优化的空间。 明天用迭代做一下

--- a/cppLeetcode.vcxproj.filters
+++ b/cppLeetcode.vcxproj.filters
@@ -177,5 +177,8 @@
     <ClCompile Include="17.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="78.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
