--- a/cppLeetcode.vcxproj
+++ b/cppLeetcode.vcxproj
@@ -174,6 +174,7 @@
     <ClCompile Include="73_2.cpp" />
     <ClCompile Include="74.cpp" />
     <ClCompile Include="75.cpp" />
+    <ClCompile Include="78.cpp" />
     <ClCompile Include="92.cpp" />
     <ClCompile Include="94.cpp" />
     <ClCompile Include="98.cpp" />
