22题十几分钟就做出来了，不错

--- a/cppLeetcode.vcxproj
+++ b/cppLeetcode.vcxproj
@@ -152,6 +152,7 @@
     <ClCompile Include="207.cpp" />
     <ClCompile Include="21.cpp" />
     <ClCompile Include="215.cpp" />
+    <ClCompile Include="22.cpp" />
     <ClCompile Include="234.cpp" />
     <ClCompile Include="236.cpp" />
     <ClCompile Include="239.cpp" />
