--- a/cppLeetcode.vcxproj.filters
+++ b/cppLeetcode.vcxproj.filters
@@ -180,5 +180,8 @@
     <ClCompile Include="78.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="22.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
