79超时，需要想想怎么剪枝

--- a/cppLeetcode.vcxproj
+++ b/cppLeetcode.vcxproj
@@ -176,6 +176,7 @@
     <ClCompile Include="74.cpp" />
     <ClCompile Include="75.cpp" />
     <ClCompile Include="78.cpp" />
+    <ClCompile Include="79.cpp" />
     <ClCompile Include="92.cpp" />
     <ClCompile Include="94.cpp" />
     <ClCompile Include="98.cpp" />
