--- a/cppLeetcode.vcxproj.filters
+++ b/cppLeetcode.vcxproj.filters
@@ -183,5 +183,8 @@
     <ClCompile Include="22.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="79.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
