贪心第一题，455分饼干，虽然做出来了，但还是不太理解为什么必须从小开始分配，从大不行吗

--- a/cppLeetcode.vcxproj.filters
+++ b/cppLeetcode.vcxproj.filters
@@ -186,5 +186,8 @@
     <ClCompile Include="79.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="455.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
