--- a/cppLeetcode.vcxproj.filters
+++ b/cppLeetcode.vcxproj.filters
@@ -189,5 +189,8 @@
     <ClCompile Include="455.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="376.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
