--- a/cppLeetcode.vcxproj.filters
+++ b/cppLeetcode.vcxproj.filters
@@ -192,5 +192,8 @@
     <ClCompile Include="376.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="860.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
