--- a/cppLeetcode.vcxproj
+++ b/cppLeetcode.vcxproj
@@ -174,6 +174,7 @@
     <ClCompile Include="56.cpp" />
     <ClCompile Include="62.cpp" />
     <ClCompile Include="73.cpp" />
+    <ClCompile Include="738.cpp" />
     <ClCompile Include="73_2.cpp" />
     <ClCompile Include="74.cpp" />
     <ClCompile Include="75.cpp" />
