--- a/cppLeetcode.vcxproj.filters
+++ b/cppLeetcode.vcxproj.filters
@@ -195,5 +195,8 @@
     <ClCompile Include="860.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="738.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
