--- a/cppLeetcode.vcxproj.filters
+++ b/cppLeetcode.vcxproj.filters
@@ -198,5 +198,8 @@
     <ClCompile Include="738.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="122.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
