--- a/cppLeetcode.vcxproj.filters
+++ b/cppLeetcode.vcxproj.filters
@@ -201,5 +201,11 @@
     <ClCompile Include="122.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="714.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="135.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
