--- a/cppLeetcode.vcxproj
+++ b/cppLeetcode.vcxproj
@@ -169,6 +169,7 @@
     <ClCompile Include="35.cpp" />
     <ClCompile Include="376.cpp" />
     <ClCompile Include="394.cpp" />
+    <ClCompile Include="406.cpp" />
     <ClCompile Include="42.cpp" />
     <ClCompile Include="455.cpp" />
     <ClCompile Include="48.cpp" />
