使用了一种非常愚蠢的慢速方法，明天来学习正确方法

--- a/cppLeetcode.vcxproj
+++ b/cppLeetcode.vcxproj
@@ -139,6 +139,7 @@
     <ClCompile Include="128.cpp" />
     <ClCompile Include="135.cpp" />
     <ClCompile Include="136.cpp" />
+    <ClCompile Include="138.cpp" />
     <ClCompile Include="141.cpp" />
     <ClCompile Include="142.cpp" />
     <ClCompile Include="144.cpp" />
