--- a/cppLeetcode.vcxproj.filters
+++ b/cppLeetcode.vcxproj.filters
@@ -210,5 +210,8 @@
     <ClCompile Include="406.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="138.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
