--- a/cppLeetcode.vcxproj.filters
+++ b/cppLeetcode.vcxproj.filters
@@ -222,5 +222,8 @@
     <ClCompile Include="344.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="279.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
