--- a/cppLeetcode.vcxproj
+++ b/cppLeetcode.vcxproj
@@ -163,6 +163,7 @@
     <ClCompile Include="25.cpp" />
     <ClCompile Include="2698.cpp" />
     <ClCompile Include="148.cpp" />
+    <ClCompile Include="279.cpp" />
     <ClCompile Include="3.cpp" />
     <ClCompile Include="300.cpp" />
     <ClCompile Include="322.cpp" />
