--- a/cppLeetcode.vcxproj.filters
+++ b/cppLeetcode.vcxproj.filters
@@ -225,5 +225,8 @@
     <ClCompile Include="279.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="152.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
