--- a/cppLeetcode.vcxproj
+++ b/cppLeetcode.vcxproj
@@ -144,6 +144,7 @@
     <ClCompile Include="142.cpp" />
     <ClCompile Include="144.cpp" />
     <ClCompile Include="146.cpp" />
+    <ClCompile Include="152.cpp" />
     <ClCompile Include="160.cpp" />
     <ClCompile Include="17.cpp" />
     <ClCompile Include="19.cpp" />
