155 用俩栈就Ok了，比用堆强

--- a/cppLeetcode.vcxproj.filters
+++ b/cppLeetcode.vcxproj.filters
@@ -228,5 +228,8 @@
     <ClCompile Include="152.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="155.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
