--- a/cppLeetcode.vcxproj
+++ b/cppLeetcode.vcxproj
@@ -145,6 +145,7 @@
     <ClCompile Include="144.cpp" />
     <ClCompile Include="146.cpp" />
     <ClCompile Include="152.cpp" />
+    <ClCompile Include="155.cpp" />
     <ClCompile Include="160.cpp" />
     <ClCompile Include="17.cpp" />
     <ClCompile Include="19.cpp" />
