--- a/cppLeetcode.vcxproj.filters
+++ b/cppLeetcode.vcxproj.filters
@@ -231,5 +231,8 @@
     <ClCompile Include="155.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="110.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
