--- a/cppLeetcode.vcxproj
+++ b/cppLeetcode.vcxproj
@@ -151,6 +151,7 @@
     <ClCompile Include="17.cpp" />
     <ClCompile Include="19.cpp" />
     <ClCompile Include="198.cpp" />
+    <ClCompile Include="199.cpp" />
     <ClCompile Include="2.cpp" />
     <ClCompile Include="20.cpp" />
     <ClCompile Include="200.cpp" />
