--- a/cppLeetcode.vcxproj.filters
+++ b/cppLeetcode.vcxproj.filters
@@ -234,5 +234,8 @@
     <ClCompile Include="110.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="199.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
