--- a/cppLeetcode.vcxproj
+++ b/cppLeetcode.vcxproj
@@ -127,6 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="1.cpp" />
     <ClCompile Include="100115.cpp" />
     <ClCompile Include="100116.cpp" />
     <ClCompile Include="1005.cpp" />
