--- a/cppLeetcode.vcxproj.filters
+++ b/cppLeetcode.vcxproj.filters
@@ -246,5 +246,8 @@
     <ClCompile Include="105.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="53.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
