--- a/cppLeetcode.vcxproj
+++ b/cppLeetcode.vcxproj
@@ -185,6 +185,7 @@
     <ClCompile Include="455.cpp" />
     <ClCompile Include="48.cpp" />
     <ClCompile Include="51.cpp" />
+    <ClCompile Include="53.cpp" />
     <ClCompile Include="543.cpp" />
     <ClCompile Include="56.cpp" />
     <ClCompile Include="62.cpp" />
