--- a/cppLeetcode.vcxproj.filters
+++ b/cppLeetcode.vcxproj.filters
@@ -249,5 +249,8 @@
     <ClCompile Include="53.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="45.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
