--- a/cppLeetcode.vcxproj
+++ b/cppLeetcode.vcxproj
@@ -188,6 +188,7 @@
     <ClCompile Include="51.cpp" />
     <ClCompile Include="53.cpp" />
     <ClCompile Include="543.cpp" />
+    <ClCompile Include="55.cpp" />
     <ClCompile Include="56.cpp" />
     <ClCompile Include="62.cpp" />
     <ClCompile Include="714.cpp" />
