--- a/cppLeetcode.vcxproj.filters
+++ b/cppLeetcode.vcxproj.filters
@@ -252,5 +252,8 @@
     <ClCompile Include="45.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="55.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
