--- a/cppLeetcode.vcxproj
+++ b/cppLeetcode.vcxproj
@@ -137,6 +137,7 @@
     <ClCompile Include="108.cpp" />
     <ClCompile Include="110.cpp" />
     <ClCompile Include="114.cpp" />
+    <ClCompile Include="118.cpp" />
     <ClCompile Include="121.cpp" />
     <ClCompile Include="122.cpp" />
     <ClCompile Include="128.cpp" />
