--- a/cppLeetcode.vcxproj.filters
+++ b/cppLeetcode.vcxproj.filters
@@ -255,5 +255,8 @@
     <ClCompile Include="55.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="118.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
