--- a/cppLeetcode.vcxproj.filters
+++ b/cppLeetcode.vcxproj.filters
@@ -258,5 +258,8 @@
     <ClCompile Include="118.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="704.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
