--- a/cppLeetcode.vcxproj.filters
+++ b/cppLeetcode.vcxproj.filters
@@ -261,5 +261,8 @@
     <ClCompile Include="704.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="quicksort.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
