--- a/cppLeetcode.vcxproj.filters
+++ b/cppLeetcode.vcxproj.filters
@@ -261,5 +261,16 @@
     <ClCompile Include="704.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="quicksort.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="49.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="resource.h">
+      <Filter>源文件\头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
