--- a/cppLeetcode.vcxproj
+++ b/cppLeetcode.vcxproj
@@ -152,6 +152,7 @@
     <ClCompile Include="155.cpp" />
     <ClCompile Include="160.cpp" />
     <ClCompile Include="17.cpp" />
+    <ClCompile Include="189.cpp" />
     <ClCompile Include="19.cpp" />
     <ClCompile Include="198.cpp" />
     <ClCompile Include="199.cpp" />
