--- a/cppLeetcode.vcxproj.filters
+++ b/cppLeetcode.vcxproj.filters
@@ -273,6 +273,9 @@
     <ClCompile Include="39.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="189.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h">
