--- a/cppLeetcode.vcxproj.filters
+++ b/cppLeetcode.vcxproj.filters
@@ -276,6 +276,9 @@
     <ClCompile Include="189.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="169.cpp">
+      <Filter>源文件\头文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h">
