--- a/cppLeetcode.vcxproj
+++ b/cppLeetcode.vcxproj
@@ -173,6 +173,7 @@
     <ClCompile Include="2698.cpp" />
     <ClCompile Include="148.cpp" />
     <ClCompile Include="279.cpp" />
+    <ClCompile Include="283.cpp" />
     <ClCompile Include="287.cpp" />
     <ClCompile Include="3.cpp" />
     <ClCompile Include="300.cpp" />
