--- a/cppLeetcode.vcxproj.filters
+++ b/cppLeetcode.vcxproj.filters
@@ -279,6 +279,9 @@
     <ClCompile Include="169.cpp">
       <Filter>源文件\头文件</Filter>
     </ClCompile>
+    <ClCompile Include="283.cpp">
+      <Filter>源文件\头文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h">
