--- a/cppLeetcode.vcxproj
+++ b/cppLeetcode.vcxproj
@@ -197,6 +197,7 @@
     <ClCompile Include="543.cpp" />
     <ClCompile Include="55.cpp" />
     <ClCompile Include="56.cpp" />
+    <ClCompile Include="560.cpp" />
     <ClCompile Include="62.cpp" />
     <ClCompile Include="704.cpp" />
     <ClCompile Include="714.cpp" />
