--- a/cppLeetcode.vcxproj.filters
+++ b/cppLeetcode.vcxproj.filters
@@ -288,6 +288,9 @@
     <ClCompile Include="450.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="myList.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h">
